--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-sudo: false
 language: python
 python:
   - "3.6"
 install:
   - pip install -r requirements.txt
 script:
-- py.test Framework/CssTool.py
+- py.test main.py
