--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
+dist: xenial 
 python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+  - pip install -e
 script:
-- py.test main.py
+- py.test Framework/PyHtml.py
