--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install -e
 script:
-- py.test Framework/PyHtml.py
+  - python main.py
