--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - python main.py
+  - python main.py < test.txt
   - python Framework/HtmlData.py
