--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ script:
   - python Framework/PyHtml.py
   - python Framework/CssTool.py
   - python main.py
+  - Project/projectFile.py
 branches:
   - master
