--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ script:
   - python Framework/PyHtml.py
   - python Framework/CssTool.py
   - python main.py
-  - Project/projectFile.py
+  - Project/projectFile.py,
+before_install:
+  - chmod +x build.sh
 branches:
   - master
