--- a/Framework/ReactModel/package.json
+++ b/Framework/ReactModel/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "antd": "^3.20.7",
     "react-scripts": "2.1.5"
   },
   "scripts": {
