--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
 script:
   - python Framework/HtmlData.py
   - python Framework/PyHtml.py
-  - python Framework/CssTool.py
+  - python Framework/StyleTools.py
 branches:
   - master
